# faster-python-with-friends

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
benchmarking/: common.py  fib.py
benchmarks/: fib.py
casts/: cython.cast  mypyc.cast  py311-demo.cast  py311.cast  py39.cast  pyo3.cast  pypy.cast
presentation/: README.md  package.json  slides.md  vite.config.js
presentation/layouts/: qrcode.vue
presentation/public/casts/: mojo_fib.cast  numpy.cast  py311.cast
presentation/public/casts/fibonacci/: cy.cast  mypy.cast  py310.cast  py311.cast  pypy.cast  rs.cast
presentation/public/casts/triangles/: cy.cast  mypy.cast  py310.cast  py311.cast  pypy.cast  rs.cast
presentation/theme/: vite.config.js
presentation/theme/components/: LayoutFooter.vue
pure_python/: triangles.py
rust_python/: pyproject.toml
rust_python/rust_python/: triangles.py
rust_python/src/: lib.rs
scripts/: benchmark.py  cy_triangles.pyx  fibonacci.py  my_triangles.pyx  time_exec.py  time_fib.py  time_fibonacci.py  time_np.py  time_tri.py  time_triangles.py  triangles.py
scripts/triangles/src/: main.rs
src/cy/: fibonacci.py  triangles.py
src/misc/: __init__.py
src/mojo/fibonacci/: high.mojo  low.🔥
src/mojo/triangles/: csv.mojo  implement_csv.mojo  low.mojo  py_imports.mojo
src/py/: fibonacci.py  timing.py  triangles.py
src/rs/: Cargo.toml  pyproject.toml
src/rs/src/: lib.rs
src/rust_python/: pyproject.toml
