[tool.pdm.scripts]
fib = "python scripts/fibonacci.py 40"
tri = "python scripts/triangles.py data/facebook_combined.txt"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.3",
    "Cython>=3.0.0b3",
    "mypy>=1.3.0",
    "maturin>=1.0.0",
]

[project]
authors         = [{name = "Murilo Cunha", email = "murilo.k.s.cunha95@gmail.com"}]
dependencies    = []
description     = ""
license         = {text = "MIT"}
name            = "py"
requires-python = ">=3.10"
version         = "0.0.0"

[tool.ruff]
fix            = true
force-exclude  = true
ignore         = ["EM", "D203", "D212"]
select         = ["ALL"]
target-version = "py310"
