[tool.pdm.scripts]
cleanup = {shell = "rm -rf build/ src/{build/,py.egg-info/,*.so} src/cy/{build/,__pycache__,*.{h,c,so}} src/py/{__pycache__/,*.{h,c,so}} src/rs/target/"}
cy      = "cythonize -i src/cy"
fib     = "python scripts/time_fib.py 40"
tri     = "python scripts/time_tri.py data/facebook_combined.txt"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.3",
    "dagger-io>=0.8.7",
]

[project]
authors         = [{name = "Murilo Cunha", email = "murilo.k.s.cunha95@gmail.com"}]
dependencies    = ["mypy>=1.3.0", "maturin>=1.0.0", "Cython>=3.0.0b3"]
description     = ""
license         = {text = "MIT"}
name            = "benchmarking"
requires-python = ">=3.10"
version         = "0.0.0"

[project.optional-dependencies]
np = ["numpy>=1.25.1"]

[tool.ruff]
fix            = true
force-exclude  = true
ignore         = ["EM", "D203", "D212"]
select         = ["ALL"]
target-version = "py310"
