[build-system]
build-backend = "maturin"
requires      = ["maturin>=1.0,<2.0"]

[project]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
name = "rust_python"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pdm.dev-dependencies]
dev = [
    "pip>=23.1.2",
]
