[build-system]
build-backend = "maturin"
requires      = ["maturin>=1.0,<2.0"]

[project]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
name = "rs"
requires-python = ">=3.9"
version = "0.0.0"

[tool.maturin]
features = ["pyo3/extension-module"]
